manifest02/jvb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jvb
  namespace: jitsi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jvb
  template:
    metadata:
      labels:
        app: jvb
    spec:
      containers:
      - name: jvb
        image: jitsi/jvb:stable
        ports:
        - containerPort: 10000
          protocol: UDP
