manifest02/prosody.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prosody
  namespace: jitsi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prosody
  template:
    metadata:
      labels:
        app: prosody
    spec:
      containers:
      - name: prosody
        image: jitsi/prosody:stable
        ports:
        - containerPort: 5222
