manifest02/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: jitsi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: jitsi/web:stable
        ports:
        - containerPort: 80
