manifest02/services.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: jitsi
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 80
    nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: jvb
  namespace: jitsi
spec:
  type: NodePort
  selector:
    app: jvb
  ports:
  - port: 10000
    nodePort: 30000
    protocol: UDP
