manifest02/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi
  namespace: jitsi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - meet.example.com
    secretName: jitsi-tls
  rules:
  - host: meet.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
